--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,7 @@ spring.h2.console.path=/h2-console
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+security.oauth2.client.scope=password
+
 server.error.include-message=always
 server.error.include-binding-errors=always
