--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=8081
 
 spring.datasource.url=jdbc:h2:mem:db
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.username=julianovsr
+spring.datasource.password=cinho@01
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
@@ -13,7 +13,6 @@ spring.h2.console.path=/h2-console
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-security.oauth2.client.scope=password
 
 server.error.include-message=always
 server.error.include-binding-errors=always
